35. Asignando productos al usuario

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -16,3 +16,12 @@ paco03:
   username: paco03
   password_digest: <%= BCrypt::Password.create('testpaco03', cost: 5) %>
   
+maria:
+  email: maria@vendelo.com
+  username: maria23
+  password_digest: <%= BCrypt::Password.create('testme', cost: 5) %>
+
+pepe:
+  email: pepe@vendelo.com
+  username: pepito
+  password_digest: <%= BCrypt::Password.create('testme', cost: 5) %>
